<resources>
    <string name="app_name" translatable="false">MyPollBook</string>
    <string name="text_Ok" translatable="false">OK</string>
    <string name="text_yes" translatable="false">Yes</string>
    <string name="text_no" translatable="false">No</string>
    <string name="text_cancel" translatable="false">Cancel</string>
    <string name="text_connecting_with_google" translatable="false">Connecting with Google&#8230;</string>
    <string name="text_invalid_account" translatable="false">You have entered an invalid EMail-ID</string>
    <string name="text_new_group" translatable="false">New Group</string>
    <string name="text_new_broadcast" translatable="false">New Broadcast</string>
    <string name="text_custom_tone" translatable="false">Custom Tone</string>
    <string name="text_msg_info" translatable="false">Message Information</string>
    <string name="text_search" translatable="false">Search</string>
    <string name="text_un_msg" translatable="false">Unread Messages</string>
    <string name="text_typing" translatable="false">typing&#8230;</string>
    <string name="text_admin" translatable="false">Admin</string>
    <string name="text_not_participant" translatable="false">You can not send messages to this group.</string>
    <string name="text_send" translatable="false">Send</string>
    <string name="text_read_by" translatable="false">Read by</string>
    <string name="text_delivered_to" translatable="false">Delivered to</string>
    <string name="text_start" translatable="false">Start</string>
    <string name="text_delete_bcast" translatable="false">Delete Broadcast</string>
    <string name="text_no_countries_found" translatable="false">No countries found</string>
    <string name="text_msg_conversation_with" translatable="false">Conversation with </string>
    <string name="text_no_contacts_to_sync" translatable="false">You do not have any contacts to Sync</string>
    <string name="text_bcast_msg_hint" translatable="false">Type broadcast name here&#8230;</string>
    <string name="text_broadcast_info" translatable="false">Broadcast Information</string>
    <string name="text_media_not_available" translatable="false">Media is not available right now</string>
    <string name="text_location_disabled" translatable="false">Location Services must be enabled to track location. Do you want to enable?</string>
    <string name="text_enable" translatable="false">Enable</string>
    <string name="text_continue" translatable="false">Continue</string>
    <string name="text_contus_msg" translatable="false">Contus Messenger</string>
    <string name="text_mark_as_unread" translatable="false">Mark as Unread</string>
    <string name="text_bcast_msg" translatable="false">Please provide Broadcast name</string>
    <string name="text_view_medias" translatable="false">View All Media</string>
    <string name="text_broadcast_created" translatable="false">Broadcast Created</string>
    <string name="text_information" translatable="false">Information</string>
    <string name="user_name_caps" translatable="false">User Name</string>
    <string name="text_welcome_to_contalk" translatable="false">Welcome to ContusMessenger</string>
    <string name="text_loading" translatable="false">\u0020\u0020Please Wait\u0020.\u0020.\u0020.</string>
    <string name="text_content_discription" translatable="false">Image</string>
    <string name="text_cross_platform" translatable="false">Cross-platform mobile messaging with\nfriends all over the world</string>
    <string name="text_terms_and_conditions" translatable="false">Terms and Conditions</string>
    <string name="text_agree_and_continue" translatable="false">Agree and Continue</string>
    <string name="txt_location" translatable="false">Location</string>
    <string name="text_splash_copy_right" translatable="false">\u00a9 2014 Contalk Inc. Powered by Contus\nAll rights reserved.</string>
    <string name="text_welcome" translatable="false">Welcome</string>
    <string name="text_new_chat_msg" translatable="false">To start messaging contacts who already have contusmessenger installed on their phone.</string>
    <string name="text_accounts" translatable="false">Accounts</string>
    <string name="text_select_country" translatable="false">Select Country</string>
    <string name="text_new_chat" translatable="false">New Chat</string>
    <string name="text_broadcast_list" translatable="false">New broadcast list</string>
    <string name="text_contacts" translatable="false">Contacts</string>
    <string name="text_polls" translatable="false">Polls</string>
    <string name="text_settings" translatable="false">Settings</string>
    <string name="text_help" translatable="false">Help</string>
    <string name="txt_hold_talk" translatable="false">HOLD AND TALK</string>
    <string name="text_status" translatable="false">Status</string>
    <string name="text_chats" translatable="false">Chats</string>
    <string name="text_phone_no" translatable="false">Phone Number</string>
    <string name="text_next" translatable="false">Next</string>
    <string name="text_msg_from" translatable="false">Message From\u0020</string>
    <string name="text_register_title" translatable="false">Contalk Messenger will send a one time SMS message to verify your phone number in case you are a new member to Contalk. Carrier SMS charges may apply.</string>
    <string name="text_register_message" translatable="false">Please confirm your country code and enter your phone number</string>
    <string name="text_verify_phone" translatable="false">Verify your Phone Number</string>
    <string name="text_no_internet" translatable="false">Please Check your Internet Connectivity</string>
    <string name="text_verified_successfully" translatable="false">Verified Successfully</string>
    <string name="text_profile_text" translatable="false">Please provide your name and an optional profile photo</string>
    <string name="text_profile_name_hint" translatable="false">Type your name here</string>
    <string name="text_profile_info" translatable="false">Profile info</string>
    <string name="text_profile_photo" translatable="false">Profile Photo</string>
    <string name="text_take_photo" translatable="false">Take Photo</string>
    <string name="text_choose_gallery" translatable="false">Choose from Gallery</string>
    <string name="text_remove_photo" translatable="false">Remove Photo</string>
    <string name="text_otp_no" translatable="false">OTP</string>
    <string name="text_complete_verficaton_title" translatable="false">Please enter the received One Time Password to complete the verification.</string>
    <string name="text_about" translatable="false">About</string>
    <string name="text_chat_settings" translatable="false">Chat Settings</string>
    <string name="text_profile" translatable="false">Profile</string>
    <string name="text_notification" translatable="false">Notification</string>
    <string name="text_vib_type" translatable="false">Select Vibration Type</string>
    <string name="text_faq" translatable="false">FAQ</string>
    <string name="text_system_status" translatable="false">System Status</string>
    <string name="text_contact_us" translatable="false">Contact Us</string>
    <string name="text_about_us" translatable="false">About Us</string>
    <string name="text_contact" translatable="false">Contact</string>
    <string name="text_location" translatable="false">Location</string>
    <string name="text_photo" translatable="false">Photo</string>
    <string name="txt_hint_msg" translatable="false">Write a message</string>
    <string name="text_invalid_user_name" translatable="false">Please enter a valid User Name</string>
    <string name="text_user_name_short" translatable="false">User Name is too short</string>
    <string name="text_group_msg" translatable="false">Please provide group subject and optional group icon</string>
    <string name="text_group_msg_hint" translatable="false">Type group subject here&#8230;</string>
    <string name="text_tap_hold" translatable="false">Tap and hold on a chat for more option</string>
    <string name="text_view_contact" translatable="false">View Contact</string>
    <string name="text_media" translatable="false">Media</string>
    <string name="text_call" translatable="false">Call</string>
    <string name="text_wallpaper" translatable="false">Wallpaper</string>
    <string name="text_more" translatable="false">More</string>
    <string name="text_camera" translatable="false">Camera</string>
    <string name="text_online" translatable="false">Online</string>
    <string name="text_offline" translatable="false">Offline</string>
    <string name="text_video" translatable="false">Video</string>
    <string name="text_take_video" translatable="false">Take Video</string>
    <string name="text_audio" translatable="false">Audio</string>
    <string name="txt_add_broadcast" translatable="false">ADD BROADCAST LIST RECIPIENTS</string>
    <string name="txt_broadcast" translatable="false">DELETE BROADCAST</string>
    <string name="txt_group_name" translatable="false">Group Name</string>
    <string name="txt_group_created" translatable="false">Created Group</string>
    <string name="txt_add_group_member" translatable="false">ADD GROUP PARTICIPANTS</string>
    <string name="txt_broadcast_msg" translatable="false">New broadcast</string>
    <string name="txt_new_group" translatable="false">Group Info</string>
    <string name="txt_new_msg" translatable="false">New Message</string>
    <string name="txt_participants" translatable="false">Participants</string>
    <string name="text_block" translatable="false">Block</string>
    <string name="text_add_shortcut" translatable="false">Add Shortcut</string>
    <string name="text_add_participants" translatable="false">Add Participant</string>
    <string name="text_profile_msg" translatable="false">This is not your username or pin. This name will be visible to your Contalk contacts</string>
    <string name="btn_logout_from_google" translatable="false">Logout from Google</string>
    <string name="btn_revoke_access" translatable="false">Revoke Access</string>
    <string name="circles_title" translatable="false">Visible circles:</string>
    <string name="sign_out_button_name" translatable="false">Sign out</string>
    <string name="revoke_access_button_name" translatable="false">Revoke</string>
    <string name="status_sign_in_required" translatable="false">Sign-in required</string>
    <string name="text_clear_conversation" translatable="false">Clear Chat</string>
    <string name="text_email_conversation" translatable="false">Email Chat</string>
    <string name="text_delete_chat" translatable="false">Delete</string>
    <string name="text_copy" translatable="false">Copy</string>
    <string name="text_forward" translatable="false">Forward</string>
    <string name="font_roboto_regular" translatable="false">fonts/roboto_regular.ttf</string>
    <string name="activity_create_poll_done" translatable="false">Done</string>
    <string name="activity_register_next" translatable="false">Next</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8071925786004738/2019140091</string>
    <string name="activity_options_polls_cretaTitle" translatable="false">Create Poll</string>
    <string name="activity_create_group" translatable="false">Create group</string>
    <string name="activity_upload_group_image" translatable="false">Upload Group Image</string>
    <string name="text_add_user" translatable="false">Add to Contacts</string>
    <string name="dummy_text" translatable="false">Dummy</string>
    <string name="broadcast_contacts" translatable="false">Please enter the broadcast name and choose the contacts</string>
    <string name="broadcast_name" translatable="false">Type your broadcast name</string>
    <string name="provide_your_broadcast_name" translatable="false">Please provide your broadcast name</string>
</resources>