<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_email"
        android:title="@string/text_email_conversation"
        android:orderInCategory="98"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_menu"
        android:orderInCategory="99"
        android:title="@string/text_clear_conversation"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_custom_tone"
        android:title="@string/text_custom_tone"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_user"
        android:icon="@drawable/icon_add_person"
        android:orderInCategory="102"
        android:title="@string/text_add_user"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>
