<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info"
        android:orderInCategory="99"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/text_information" />

    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_action_forward"
        android:orderInCategory="99"
        app:showAsAction="ifRoom"
        android:title="@string/text_forward" />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/icon_copy"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/text_copy" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="102"
        app:showAsAction="ifRoom"
        android:title="@string/text_delete_chat" />
</menu>