<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_group_chat"
        android:title="@string/text_new_group"
        app:showAsAction="never"

        />

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/icon_compose"
        android:orderInCategory="100"
        android:title="@string/text_new_chat"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/icon_search"
        android:orderInCategory="99"
        android:title="@string/text_search"
        android:visible="true"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

</menu>
