<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/blue_color"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/activity_options_polls_cretaTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
       />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

    <ImageView
        android:id="@+id/imagBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:paddingLeft="@dimen/view_margin"
        android:paddingRight="@dimen/view_margin"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/app_name" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/adView"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/done"
        style="@style/app_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/bluebutton_rectangle"
        android:onClick="onClick"
        android:visibility="gone"
        android:text="@string/activity_create_poll_done" />
</RelativeLayout>
