<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="3dp">

    <LinearLayout
        android:id="@+id/view_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_chat_smiley"
            style="@style/style_chat_controls"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:contentDescription="@string/text_content_discription"
            android:scaleType="fitXY"
            android:src="@drawable/ic_smile"
            android:tint="@color/colorPrimary"/>

        <com.contusfly.views.CustomEditText
            android:id="@+id/edt_chat_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/txt_hint_msg"
            android:maxLines="5"
            android:padding="5dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:textColorHint="@color/color_light_gray"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            app:emojiconSize="22sp" />

        <ImageView
            android:id="@+id/img_chat_send"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="0"
            android:scaleType="fitXY"
            android:padding="3dp"
            android:contentDescription="@string/text_content_discription"
            android:src="@drawable/abc_send_normal" />

    </LinearLayout>

    <com.contusfly.views.CustomTextView
        android:id="@+id/txt_no_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/text_not_participant"
        android:textColor="@color/color_dark_gray"
        android:textSize="17sp"
        android:visibility="gone"
        app:font_name="@string/font_roboto_regular" />
</LinearLayout>