<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_new_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/blue_color"
        android:gravity="center"
        android:padding="@dimen/view_margin"
        android:text="@string/text_new_broadcast"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        />

    <ImageView
        android:id="@+id/imagBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:paddingLeft="@dimen/view_margin"
        android:paddingRight="@dimen/view_margin"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/app_name" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:layout_above="@+id/view1">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_view_margin">
            <TextView
                android:id="@+id/mtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"
                android:text="@string/broadcast_contacts"
                android:textSize="16sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                 />

            <com.contusfly.views.CustomEditText
                android:id="@+id/edt_gsub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mtitle"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:hint="@string/broadcast_name"
                android:maxLength="25"
                android:padding="5dp"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:textColor="@android:color/black"
                android:textColorHint="@color/color_dark_gray"
                android:textCursorDrawable="@null"
                android:textSize="17sp"
                app:emojiconSize="20sp"
                />
            <TextView
                android:id="@+id/txt_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/dummy_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_alignBottom="@+id/edt_gsub"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/edt_gsub" />
            <ImageView
                android:id="@+id/img_grp_smiley"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/text_content_discription"
                android:src="@drawable/ic_smile"
                android:visibility="gone" />

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/edt_gsub"
                android:layout_marginTop="10dp"
                android:background="@color/view_color" />


            <TextView
                android:id="@+id/txtGroupName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_marginTop="10dp"
                android:text="@string/provide_your_broadcast_name"
                android:textColor="@color/helvetica_light_greycolor"
                android:textSize="@dimen/activity_textSize_small_16"
                />
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txt_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/buttonclick_color"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/activity_tearms_padding"
        android:text="@string/activity_register_next"
        android:textColor="@color/blue_color"
        android:textSize="@dimen/activity_textSize_large"
        />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_above="@+id/txt_create"
        android:background="@android:color/darker_gray" />

</RelativeLayout>
