<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_new_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/blue_color"
        android:gravity="center"
        android:padding="@dimen/view_margin"
        android:text="@string/activity_create_group"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imagBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:paddingLeft="@dimen/view_margin"
        android:paddingRight="@dimen/view_margin"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/app_name" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:paddingBottom="@dimen/x_large_view_margin">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/txtUploadImageGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="@string/activity_upload_group_image"
                android:textSize="@dimen/activity_textSize_large" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/imagGroup"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@+id/txtUploadImageGroup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                fresco:placeholderImage="@drawable/icon_grp"
                fresco:roundAsCircle="true" />


            <com.contusfly.views.CustomEditText
                android:id="@+id/edt_gsub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imagGroup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:hint="@string/text_group_msg_hint"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/color_dark_gray"
                android:textCursorDrawable="@null"
                android:textSize="17sp"
                app:emojiconSize="20sp" />

            <TextView
                android:id="@+id/txt_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/edt_gsub"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/edt_gsub"
                android:layout_gravity="center_vertical"
                android:text="@string/dummy_text"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_grp_smiley"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/text_content_discription"
                android:src="@drawable/ic_smile"
                android:visibility="gone" />

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/edt_gsub"
                android:layout_marginTop="10dp"
                android:background="@color/view_color" />


            <TextView
                android:id="@+id/txtGroupName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_marginTop="10dp"
                android:text="@string/text_group_msg"
                android:textColor="@color/helvetica_light_greycolor"
                android:textSize="@dimen/activity_textSize_small_16" />
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txtCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/buttonclick_color"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/activity_tearms_padding"
        android:text="@string/activity_register_next"
        android:textColor="@color/blue_color"
        android:textSize="@dimen/activity_textSize_large" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_above="@+id/txtCreate"
        android:background="@android:color/darker_gray" />
</RelativeLayout>

